Bug 1265513 - Do a fuzzy match when checking to see if a scroll will result in overscroll. r=botond

MozReview-Commit-ID: 3fFZHXWMnWv